# Heatwave-Dhaka_BD

./: .gitignore  CLAUDE.md  ENVIRONMENT_SETUP.md  Heatwave-Dhaka_BD.code-workspace  Help.md  Insights.md  README.md  TODO.md  data_dictionary.py  data_loader.py  demo_improvements.py  environment.yml  final_code.ipynb  heatwave_analysis_report.txt  improved_arima.py  improved_lstm.py  main.ipynb  main_improved.py  main_modular.ipynb  plot_visuals.py  predictive_models.py  pyproject.toml  pytorch_lstm.py  requirements.txt  stat_models.py  statistical_analysis.py  time_series_validation.py  uncertainty_quantification.py  visualization.py
data/: GFW_Dhaka.csv
src/: __init__.py  data_loader.py  predictive_models.py  statistical_analysis.py  visualization.py  visualization_utils.py
