[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatwave-dhaka-analysis"
version = "1.0.0"
description = "Comprehensive climate analysis for Dhaka, Bangladesh heatwave patterns"
authors = [
    {name = "Climate Research Team", email = "research@climate.org"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0"
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.8.0",
    "xgboost>=1.5.0",
    "pmdarima>=1.8.0",
    "scikit-optimize>=0.9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pylance]
include = ["src", "*.py", "*.ipynb"]
extraPaths = ["src"]

[tool.pyright]
include = ["src", "*.py", "*.ipynb"]
extraPaths = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
